[gd_scene load_steps=4 format=3 uid="uid://ct8g71n2imhd"]

[ext_resource type="Script" path="res://ChangePlanet.gd" id="1_k12ro"]
[ext_resource type="Texture2D" uid="uid://dd7ln7yn37dnt" path="res://Sprites/KEKE.png" id="2_bny12"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0xj2w"]
atlas = ExtResource("2_bny12")
region = Rect2(24, 186, 1152, 564)

[node name="ChangePlanet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k12ro")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 564.0
texture = SubResource("AtlasTexture_0xj2w")

[node name="Planets" type="Control" parent="CanvasLayer/TextureRect"]
anchors_preset = 0
offset_left = 66.0
offset_top = 87.0
offset_right = 1017.0
offset_bottom = 445.0

[node name="Exploria" type="Button" parent="CanvasLayer/TextureRect/Planets"]
layout_mode = 0
offset_left = 47.0
offset_top = 40.0
offset_right = 264.0
offset_bottom = 123.0
text = "Exploria"

[node name="Vulkanie" type="Button" parent="CanvasLayer/TextureRect/Planets"]
layout_mode = 0
offset_left = 455.0
offset_top = 38.0
offset_right = 672.0
offset_bottom = 121.0
text = "Vulkanika"

[node name="Ekzotika" type="Button" parent="CanvasLayer/TextureRect/Planets" groups=["ChangeScene"]]
layout_mode = 0
offset_left = 57.0
offset_top = 162.0
offset_right = 274.0
offset_bottom = 245.0
text = "EKZOOTIKA"

[node name="Green OAZIS" type="Button" parent="CanvasLayer/TextureRect/Planets"]
layout_mode = 0
offset_left = 459.0
offset_top = 162.0
offset_right = 676.0
offset_bottom = 245.0
text = "Green OAZIS"

[connection signal="pressed" from="CanvasLayer/TextureRect/Planets/Exploria" to="." method="_on_exploria_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/Planets/Vulkanie" to="." method="_on_vulkanie_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/Planets/Ekzotika" to="." method="_on_ekzotika_pressed"]
